--- a/SDLInvading.vcxproj
+++ b/SDLInvading.vcxproj
@@ -171,9 +171,11 @@
   <ItemGroup>
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\Core\Game.cpp" />
+    <ClCompile Include="Source\Core\TimeStamp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Core\Game.h" />
+    <ClInclude Include="Source\Core\TimeStamp.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
