--- a/SDLInvading.vcxproj.filters
+++ b/SDLInvading.vcxproj.filters
@@ -24,9 +24,15 @@
     <ClCompile Include="Source\Core\Game.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Core\TimeStamp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Core\Game.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Core\TimeStamp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
