--- a/SDLInvading.vcxproj
+++ b/SDLInvading.vcxproj
@@ -169,6 +169,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Gameplay\Map.cpp" />
     <ClCompile Include="Source\Gameplay\GameObject.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\Core\Game.cpp" />
@@ -176,6 +177,7 @@
     <ClCompile Include="Source\Graphics\TextureManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Gameplay\Map.h" />
     <ClInclude Include="Source\Gameplay\GameObject.h" />
     <ClInclude Include="Source\Core\Game.h" />
     <ClInclude Include="Source\Core\TimeStamp.h" />
