--- a/SDLInvading.vcxproj.filters
+++ b/SDLInvading.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Source\Gameplay\GameObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Gameplay\Map.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Core\Game.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Gameplay\GameObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Gameplay\Map.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
