--- a/SDLInvading.vcxproj
+++ b/SDLInvading.vcxproj
@@ -169,6 +169,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Core\ECS.cpp" />
     <ClCompile Include="Source\Gameplay\Map.cpp" />
     <ClCompile Include="Source\Gameplay\GameObject.cpp" />
     <ClCompile Include="Source\main.cpp" />
@@ -177,6 +178,7 @@
     <ClCompile Include="Source\Graphics\TextureManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Core\ECS.h" />
     <ClInclude Include="Source\Gameplay\Map.h" />
     <ClInclude Include="Source\Gameplay\GameObject.h" />
     <ClInclude Include="Source\Core\Game.h" />
