--- a/SDLInvading.vcxproj
+++ b/SDLInvading.vcxproj
@@ -169,6 +169,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Core\ECS\SceneView.cpp" />
     <ClCompile Include="Source\Core\Input\InputHandler.cpp" />
     <ClCompile Include="Source\Helpers\ResourceManager.cpp" />
     <ClCompile Include="Source\Core\ECS\ECS.cpp" />
@@ -181,6 +182,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Core\ECS\ComponentPool.h" />
+    <ClInclude Include="Source\Core\ECS\SceneView.h" />
     <ClInclude Include="Source\Core\Input\InputHandler.h" />
     <ClInclude Include="Source\Helpers\ResourceManager.h" />
     <ClInclude Include="Source\Gameplay\Components\PositionComponent.h" />
